# mirror.me-radio

./: .gitignore  LICENSE  Procfile  README.md  requirements.txt
local-stack/: README.md  TODO.md  listen.py  pyproject.toml
local-stack/experiments/: 2026-07-23-kokoro-streaming-harness.md  2026-07-23-tts-streaming-check.md
local-stack/llm/: DECISION.md  system_prompt.txt  test_voice.py
local-stack/research/: 01-google-speech-translation-architecture.md  02-local-voice-agent-latency.md  03-voice-agent-hardware-options.md  04-precompute-vs-live-architecture.md  2026-07-23-google-speech-translation-architecture.md  2026-07-23-local-voice-agent-latency.md  2026-07-23-precompute-vs-live-architecture.md  2026-07-23-voice-agent-hardware-options.md
local-stack/stt/: DECISION.md  evaluate.py  faster_whisper_stt.py  interface.py  mlx_whisper_stt.py
local-stack/tts/: DECISION.md  dia_tts.py  evaluate.py  interface.py  mlx_audio_tts.py  openvoice_eval.py  parler_eval.py  piper_tts.py  split_stage1_dia.py  split_stage1_parler.py  split_stage2_convert.py  test_lines.py  xtts_eval.py
prototypes/affirmations/: README.md  SNAPSHOT.md  VERSIONS.md  app.py  requirements.txt
prototypes/affirmations/docs/versions/v1.0/: ARCHITECTURE.md  FEATURES.md  PERFORMANCE_NOTES.md
prototypes/affirmations/static/: index.html
radio/: 2026-06-28-dial-update.md  main.py  models.py
radio/static/: radio.html
radio_v0/: 2026-04-28-mirrorme-radio-architecture.md  2026-04-30-v0-playtest-notes.md  main.py
